syntax = "proto2";

package object_detection.protos;

// Configuration proto for SSD anchor generator described in
// https://arxiv.org/abs/1512.02325. See
// anchor_generators/multiple_grid_anchor_generator.py for details.
message SsdAnchorGenerator {
  // Number of grid layers to create anchors for.
  optional int32 num_layers = 1 [default = 6];

  // Scale of anchors corresponding to finest resolution.
  optional float min_scale = 2 [default = 0.2];

  // Scale of anchors corresponding to coarsest resolution
  optional float max_scale = 3 [default = 0.95];

  // Aspect ratios for anchors at each grid point.
  repeated float aspect_ratios = 4;

  // Whether to use the following aspect ratio and scale combination for the
  // layer with the finest resolution : (scale=0.1, aspect_ratio=1.0),
  // (scale=min_scale, aspect_ration=2.0), (scale=min_scale, aspect_ratio=0.5).
  optional bool reduce_boxes_in_lowest_layer = 5 [default = true];
}
